--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nyust-sso-client"
-version = "0.1.1"
+version = "0.2.0"
 description = "A client for NYUST SSO system, providing authenticated access and common API calls."
 authors = ["jason9294 <jason9294@gmail.com>"]
 license = "MIT"
@@ -14,6 +14,7 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 pydantic = "^2.10.4"
 pytz = "^2024.2"
+colorlog = "^6.9.0"
 
 
 [build-system]
